objects/Staging_Contact__c/Staging_Contact__c.object-meta.xml
<CustomObject>
    <label>Staging Contact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>