objects/Staging_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Contacts</relationshipLabel>
    <relationshipName>Staging_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>