objects/Staging_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Staging Contacts</relationshipLabel>
    <relationshipName>Staging_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>