objects/Staging_Contact__c/fields/Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Error_Text__c</fullName>
    <label>Error Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>