objects/Staging_Contact__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Updated By</label>
    <referenceTo>Portal_Login__c</referenceTo>
    <relationshipLabel>Staging Contacts</relationshipLabel>
    <relationshipName>Staging_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>