objects/Staging_Contact__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>