objects/Staging_Contact__c/fields/Note_Id__c.field-meta.xml
<CustomField>
    <fullName>Note_Id__c</fullName>
    <label>Note Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>