objects/Staging_Contact__c/fields/Update_Request_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Request_Email_Sent_Date__c</fullName>
    <label>Update Request Email Sent Date</label>
    <type>DateTime</type>
</CustomField>