objects/Staging_Contact__c/fields/Verify_Information__c.field-meta.xml
<CustomField>
    <fullName>Verify_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Information</label>
    <type>Checkbox</type>
</CustomField>