objects/Staging_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Update_Request_Email_Sent__c</columns>
    <columns>Is_Synced__c</columns>
    <columns>Is_Updated__c</columns>
    <columns>Last_Updated_By__c</columns>
    <columns>Error_Text__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>