objects/Staging_Contact__c/listViews/Contact_Synced.listView-meta.xml
<ListView>
    <fullName>Contact_Synced</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Synced__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contact Synced</label>
</ListView>