objects/Staging_Contact__c/listViews/Contacts_to_Send_Email.listView-meta.xml
<ListView>
    <fullName>Contacts_to_Send_Email</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Update_Request_Email_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Contacts to Send Email</label>
</ListView>