objects/Staging_Contact__c/listViews/Updated_Not_Synced.listView-meta.xml
<ListView>
    <fullName>Updated_Not_Synced</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Verify_Information__c</columns>
    <columns>Last_Updated_By__c</columns>
    <columns>Last_Updated_Date__c</columns>
    <columns>Error_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending Update from Customers</label>
</ListView>